# Minecraft-Remake

./: CMakeLists.txt  GameEngineStructure.txt.txt
Assets/Shaders/Core/: basic.frag
Engine/Render/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshHandle.cpp  MeshHandle.hpp  Renderer.cpp  Renderer.hpp  blockStateData.hpp  camera.cpp  camera.hpp
Engine/Render/gl/: Ebo.cpp  Ebo.hpp  Shaders.txt  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  mesh_types.hpp  shaderClass.cpp  shaderClass.hpp  textureClass.cpp  textureClass.hpp
Engine/Render/lighting/: light.hpp
Engine/Util/: FileLoading.hpp
Game/Models/: CubeMesh.cpp  CubeMesh.hpp  KeyPoints.txt
Game/World/: TerrainGen.hpp
Src/: main.cpp
build-ucrt64/: CMakeCache.txt  Makefile  cmake_install.cmake
build-ucrt64/Assets/Models/Block/: grass_block.json
build-ucrt64/Assets/Shaders/Core/: basic.vert
